Animations and links
> Animations are done
note: Still unsure if its necessary to add animations to the contact section

> Finished up social media links

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                 </div>
                 <div class="formBrands">
                     <div class="subTitleIcons">
-                        <i class="fa-brands fa-twitter"></i>
-                        <i class="fa-brands fa-github"></i>
+                        <a href="https://twitter.com/DanielDEVVVV" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="https://github.com/DanielSA10" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
                     </div>
 
                 </div>
@@ -202,13 +202,13 @@
     <!--PROJECTS SECTION-->
     <section id="projects">
 
-<div class="formAbout">
-    <div class="projectsTitle">
-        <p>Projects</p>
-    </div>
-
-</div>
-    <div class="aboutLine"></div>
+        <div class="formProjects">
+            <div class="aboutMeTitle">
+                <p>Projects</p>
+            </div>
+        </div>
+    <div class="projectLine"></div>
+    <div class="markerTrigger"></div>
     <div class="wr">
         <div class="projectsContainer">
             <div class="form">
@@ -371,6 +371,7 @@
     <section id="contact" class="contactClass">
         <div class="contactTitle">
             <p>CONTACT ME</p>
+            <p class="contactTitleSmall">Or directly by mail at: <span>Danieldev@outlook.dk</span></p>
         </div>
         <form action="https://formsubmit.co/danielstanley@live.dk" method="POST" class="contactForm">
             <div class="email">
@@ -390,7 +391,7 @@
 </div>
 </div>
 <footer>
-    <p>Website by Daniel Stanley Andersen</p>
+    <p>Website Designed & Written by Daniel Stanley Andersen</p>
 </footer>
 </body>
 </html>
