> All Animation done
> All Animation done

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <!--NavBar-->
 <nav class="navBar">
-    <img src="/logo/SVG/Lag 1 (3).svg" alt="">
+    <a href="#"><img src="/logo/SVG/Lag 1 (3).svg" alt=""></a>
     <ul class="navLinks">
         <li><a href="#">About me</a></li>
         <li><a href="#">Projects</a></li>
@@ -94,7 +94,7 @@
                     I take pride in my work and am constantly striving to push myself and learn.
                 </p> -->
                 <div class="aboutMeBtn">
-                    <button class="aboutBtn">Read more</button>
+                    <button class="aboutBtn"><a href="/Pages/about/AboutMe.html">Read More</a></button>
                 </div>
             </div>
         </div>
@@ -383,23 +383,25 @@
 <!--Contact Section-->
 
 <section id="contact" class="contactClass">
-    <div class="contactTitle">
-        <p>CONTACT ME</p>
-        <p class="contactTitleSmall">Or directly by mail at: <span>Danieldev@outlook.dk</span></p>
-    </div>
-    <form action="https://formsubmit.co/danielstanley@live.dk" method="POST" class="contactForm">
-        <div class="email">
-            <p>Email</p>
-            <input type="email" name="email"class="inputEmail">
-            <div class="contactLine"></div>
+
+        <div class="contactTitle">
+            <p>CONTACT ME</p>
+            <p class="contactTitleSmall">Or directly by mail at: <span>Danieldev@outlook.dk</span></p>
         </div>
-        <div class="contactText">
-            <label>Message</label>
-            <textarea name="text" class="inputText" cols="30" rows="10" type="text" required ></textarea>
-            <!-- <input type="text" name="text" class="inputText"> -->
-        </div>
-        <button type="submit" class="formSubmit">Submit</button>
-    </form>
+        <form action="https://formsubmit.co/danielstanley@live.dk" method="POST" class="contactForm">
+            <div class="email">
+                <p>Email</p>
+                <input type="email" name="email"class="inputEmail">
+                <div class="contactLine"></div>
+            </div>
+            <div class="contactText">
+                <label>Message</label>
+                <textarea name="text" class="inputText" cols="30" rows="10" type="text" required ></textarea>
+                <!-- <input type="text" name="text" class="inputText"> -->
+            </div>
+            <button type="submit" class="formSubmit">Submit</button>
+        </form>
+
 </section>
 
 </div>
