Added text and a bit of redesign

--- a/Pages/about/AboutMe.html
+++ b/Pages/about/AboutMe.html
@@ -54,24 +54,26 @@
         <div class="formAbout">
             <div class="aboutMeInfo">
                 <p>
-                    This journey of learning web development has been the hardest and most rewarding thing I've ever done. 
-                    
-                    I specialize with responsive design and everything Front-end related when it comes to developing a website.
-                    I am a hardworking and dedicated individual who is passionate about front end development. 
-                    I enjoy creating visually appealing and user-friendly websites. 
-                    I am always looking for new ways to improve my skills and stay up-to-date with the latest technologies and trends in the industry. 
-                    I am a team player and I enjoy working with others to achieve a common goal.
-                </br>
-                </br>
-                    As a former personal weight trainer, I have developed excellent communication skills. 
-                    My ability to effectively communicate allows me to build strong relationships with clients, and understand their needs and goals. 
-                    I take pride in my work and am constantly striving to push myself and learn.
-                </p>
-            </br>
-            <p>                    As a former personal weight trainer, I have developed excellent communication skills. 
-                My ability to effectively communicate allows me to build strong relationships with clients, and understand their needs and goals. 
-                I take pride in my work and am constantly striving to push myself and learn.</p>
-            
+                   My name is Daniel Stanley Andersen. I am  27 years old, and I have a dream of becoming a front End web developer. 
+                   The pursuit of this goal has been the hardest but the most rewarding thing I've ever set out to do, with many ups and downs.
+                    </br>
+                    </br> 
+                   For my whole life I have surrounded myself with computers and tech, as such, I did from a very early age develop 
+                   technical, and excellent english skills. 
+                   For years I worked on architectual 3D modelling and rendering with 3DS max and Vray. Something I very much enjoyed but eventually grew out of.
+                   I have a very strong work ethic, and I care very much about my health and In my free time I spend a lot of time at my local gym. There I established 
+                   a team for young children to come and work out, which was highly successful, and the team quickly grew big. A gig that helped me refine my skills in communication and multitasking.
+                   Besides that I have acted is a personal trainer at the gym which helped me hown by communication skills, and to build strong relationships with clients, 
+                   and understand their needs and goals.
+                    </br>
+                    </br> 
+                  I take pride in my work and am constantly striving to push myself and learn, aswell as to improve my skills and stay up-to-date with the latest technologies and trends in the industry. 
+                    </br>
+                    </br> 
+                  For the reasons listed above I believe I would be a valuable asset to any organization.
+                    </br>
+                    </br> 
+                </p>  
                 <div class="aboutMeBtn">
                     <button class="aboutBtn"><a href="/index.html">Back to frontpage</a></button>
                 </div>
