Various style updates

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                 </div>
                 <div class="projectsCardContent">
                 <div class="projectsImg">
-                    <img src="/projectImg/portfolio.png" class="portfolioImg" alt="" />
+                    <img src="/projectImg/portfolio_edit.png" class="portfolioImg" alt="" />
                 </div>
                 <div class="projectsCardInfo">
                     <p class="projectsCardText">
