--- a/Pages/Bank Dashboard/bankDashboard.html
+++ b/Pages/Bank Dashboard/bankDashboard.html
@@ -45,10 +45,10 @@
         <dialog class="modal" method="dialog">
             <form>
 
-                <label>Your name<input type="text" placeholder="Name" class="inputName"></label>
-                <label>Card Number<input type="text" placeholder="card number" class="inputNumber"></label>
-                <label>Card Date<input type="datetime" placeholder="date" class="inputDate"></label>
-                <label>Balance<input type="number" placeholder="Specify Amount" class="inputBalance"></label>
+                <label>Your name<input type="text" placeholder="Name" class="inputName" required></label>
+                <label>Card Number<input type="number" placeholder="card number" class="inputNumber" required></label>
+                <label>Card Date<input type="datetime" placeholder="date" class="inputDate" required></label>
+                <label>Balance<input type="number" placeholder="Specify Amount" class="inputBalance" required></label>
 
                 <button class="formSubmit" type="submit">Submit</button>
             </form>
