Fixed add card bug
> Fixed the bug where a card could be made even if the input forms were left empty

--- a/Pages/Bank Dashboard/bankDashboard.html
+++ b/Pages/Bank Dashboard/bankDashboard.html
@@ -45,10 +45,10 @@
         <dialog class="modal" method="dialog">
             <form>
 
-                <label>Your name<input type="text" placeholder="Name" class="inputName" required></label>
-                <label>Card Number<input type="number" placeholder="card number" class="inputNumber" required></label>
-                <label>Card Date<input type="datetime" placeholder="date" class="inputDate" required></label>
-                <label>Balance<input type="number" placeholder="Specify Amount" class="inputBalance" required></label>
+                <label>Your name<input type="text" placeholder="Name" class="inputName"></label>
+                <label>Card Number<input type="number" placeholder="card number" class="inputNumber"></label>
+                <label>Card Date<input type="datetime" placeholder="date" class="inputDate"></label>
+                <label>Balance<input type="number" placeholder="Specify Amount" class="inputBalance"></label>
 
                 <button class="formSubmit" type="submit">Submit</button>
             </form>
@@ -66,7 +66,7 @@
                     <p>Daniel Stanley Andersen</p>
                     <p>1568 3268 4592 6572</p>
                     <p>7/4 - 24</p>
-                    <p class="cardBalanceValue">5000</p>
+                    <p class="cardBalanceValue">$5000</p>
                 </div>
                 <button class="deleteBtn">X</button>
             </div>
