Various styling changes

--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
                 <div class="cardInfo">
                     <div class="cardTitle">Wordpress / Elementor</div>
                     <div class="cardText"> 
-                      Wordpress, alongside Elementor makes it easy to make an 
-                      e commerce website with complete responsiveness, 
-                      that makes my work as easy as possible.
+                      Wordpress, alongside WooCommerce and Elementor makes it easy to make a 
+                      modern e-commerce website with complete responsiveness, 
+                      that makes my work as easy and professional-looking as possible.
                     </div>
                   </div>
             </div>
@@ -149,7 +149,7 @@
                     <div class="cardTitle">HTML5</div>
                     <div class="cardText">
                       I use HTML to markup my website, and make the CSS process as 
-                      Smooth as possible. This is also where Responsive Design begins 
+                      smooth as possible. This is also where Responsive Design begins 
                     </div>
                   </div>
             </div>
@@ -164,7 +164,7 @@
                     <div class="cardTitle">CSS3</div>
                     <div class="cardText">
                       CSS is what I use to design my website, so it looks presentable
-                      with responsive design that complements every screens and sizes.
+                      with responsive design that compliments every screen and sizes.
                     </div>
                   </div>
             </div>
@@ -206,8 +206,8 @@
                 <div class="cardInfo">
                     <div class="cardTitle">Figma</div>
                     <div class="cardText">
-                      All of my projects begin in FIGMA. It's here I start troubleshooting
-                      the design, and it allows me to streamline the development. 
+                      All of my projects begin in FIGMA. It's here I start troubleshooting and have fun with different 
+                      designs, and it allows me to start coding with a complete overview of what the project will look like. 
                     </div>
                   </div>
             </div>
@@ -221,7 +221,7 @@
                     <div class="cardTitle">Git</div>
                     <div class="cardText">
                       GIT is a version control system that gives me the option to track
-                      any changes in my project, and makes it easier to develop alongside other developers
+                      any changes in my project, while also making it easier to develop alongside other developers
                     </div>
                   </div>
             </div>
