--- a/Pages/about/AboutMe.html
+++ b/Pages/about/AboutMe.html
@@ -55,25 +55,16 @@
             <div class="aboutMeInfo">
                 <p>
                     My name is Daniel Stanley Andersen. I am  27 years old, and I have a dream of becoming a front End web developer. 
-                    The pursuit of this goal has been the hardest but the most rewarding thing I've ever set out to do, with many ups and downs.
+                    The pursuit of this goal has been the hardest yet the most rewarding thing I've ever set out to do, with many ups and downs. but I can without a doubt in my mind say that this crazy dream of mine is exactly what i'm supposed to pursue. 
                      </br>
                      </br> 
-                    For my whole life I have surrounded myself with computers and tech, as therefore, I did from a very early age develop excellent
-                    technical, and english skills. 
-                    I have always had a strong curiosity for being vreative, whether it's video editing, or architectual 3D modelling.
-                    I have a very strong work ethic, and care very much about my personal health and as such, I spend a lot of my free time at my local gym. There I established 
-                    a team for young people to come and work out, which was highly successful, and the team quickly grew big. A gig that helped me refine my skills in communication and multitasking.
-                    Besides that I have acted is a personal trainer at the gym which helped me hown by communication skills, and to build strong relationships with clients, 
-                    and understand their needs and goals.
+                     For my whole life I have surrounded myself with computers and tech, and therefore, I did from a very early age develop excellent
+                     technical, and english skills. In my free time, if i'm not playing Chess or Counter Strike, then i'm down at my local gym lifting weights or acting as a personal trainer.
+                     Besides being a personal trainer, i've also been a part of creating a successful program for young people to come down and pursue a healthy lifestyle by lifting weights.
                      </br>
                      </br> 
                    I take pride in my work and am constantly striving to push myself and learn, aswell as to improve my skills and stay up-to-date with the latest technologies and trends in the industry. 
-                     </br>
-                     </br> 
-                   For the reasons listed above I believe I would be a valuable asset to any organization.
-                     </br>
-                     </br> 
-                     I hope to hear from you!
+
                  </p>  
                 <div class="aboutMeBtn">
                     <button class="aboutBtn"><a href="/index.html">Back to frontpage</a></button>
