Changed headshot picture

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </div>
         <div class="formAbout">
             <div class="aboutMeImg">
-                <img src="/headshot/Skærmbillede 2022-11-10 110531.png" alt="">
+                <img src="/headshot/hs2.jpg" alt="">
             </div>
         </div>
     </div>
