Changed some text

--- a/Pages/about/AboutMe.html
+++ b/Pages/about/AboutMe.html
@@ -54,12 +54,12 @@
         <div class="formAbout">
             <div class="aboutMeInfo">
                 <p>
-                    My name is Daniel Stanley Andersen. I am  27 years old, and I have a dream of becoming a front End web developer. 
+                    My name is Daniel Stanley Andersen. I am  27 years old, and I have a dream of becoming a front end web developer. 
                     The pursuit of this goal has been the hardest yet the most rewarding thing I've ever set out to do, with many ups and downs. but I can without a doubt in my mind say that this crazy dream of mine is exactly what i'm supposed to pursue. 
                      </br>
                      </br> 
                      For my whole life I have surrounded myself with computers and tech, and therefore, I did from a very early age develop excellent
-                     technical, and english skills. In my free time, if i'm not playing Chess or Counter Strike, then i'm down at my local gym lifting weights or acting as a personal trainer.
+                     technical, and english skills. In my free time, if i'm not playing Chess or video games, then i'm down at my local gym lifting weights or acting as a personal trainer.
                      Besides being a personal trainer, i've also been a part of creating a successful program for young people to come down and pursue a healthy lifestyle by lifting weights.
                      </br>
                      </br> 
