Changed some text and added animation to hamburger

--- a/index.html
+++ b/index.html
@@ -329,9 +329,10 @@
                 </div>
                 <div class="projectsCardInfo">
                     <p class="projectsCardText">
-                    A fully responsive and dynamic weather app using an api, 
-                    with a slick and easy to understand design inspired by <span>HIM</span> makes it accessible to everyone. 
-                    The app can give accurate depections of chances of rain visibility, sun activity, dynamic backgrounds and much more.
+                    A fully responsive and dynamic weather app using an api from OpenWeatherApp, 
+                    with a slick and easy to understand design, and contrasting colors, this app is easily accessible to just about everyone.   
+                    The app can give accurate depictions of chances of rain visibility, sun activity, and much more.
+                    It also dynamically is able to change the background image based on the location that is input into the app.   
                     </p>
                     <div class="projectsCardStack">
                     <i class="fa-brands fa-html5"></i>
@@ -364,11 +365,11 @@
                 </div>
                 <div class="projectsCardInfo">
                     <p class="projectsCardText">
-                    Amem faucibus et lorem in blandit. Maecenas bibendum eget magna eu
-                    luctus. In eleifend, mi ac vehicula egestas, quam diam ornare
-                    ligula, eget suscipit nisl dui eu leo. Donec placerat tellus ex,
-                    et fringilla purus tincidunt ut. Amem faucibus et lorem in
-                    blandit.
+                        A fully responsive portfolio website, designed & written by myself. Besides showcasing my projects,
+                        one of the biggest goals with this portfolio was the flow and presentation of the site.
+                        Therefore I utilized animation made with gsap that offers easy to use, flexible and responstive animation, 
+                        and white decoration on a dark blue backkground that provides a crisp clean contrast that easily readable
+                        
                     </p>
                     <div class="projectsCardStack">
                     <i class="fa-brands fa-html5"></i>
