Changed the email adress for the form submit

--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
             <p>CONTACT ME</p>
             <p class="contactTitleSmall">Or directly by mail at: <span>Danieldev@outlook.dk</span></p>
         </div>
-        <form action="https://formsubmit.co/danielstanley@live.dk" method="POST" class="contactForm">
+        <form action="https://formsubmit.co/danieldev@outlook.dk" method="POST" class="contactForm">
             <div class="email">
                 <p>Email</p>
                 <input type="email" name="email"class="inputEmail">
